system/kustomize/boot-operator-remote/manager-remote-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
spec:
  strategy:
    type: Recreate 
  template:
    spec:
      hostNetwork: true
      containers:
        - name: manager
          args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=127.0.0.1:8080
            - --leader-elect
            - --controllers=httpbootconfig,ipxebootconfig,serverbootconfighttp,serverbootconfigpxe
          livenessProbe:
            httpGet:
              port: 8087
          readinessProbe:
            httpGet:
              port: 8087
          ports:
            - containerPort: 8082
              name: ipxe
              protocol: TCP
          volumeMounts:
          - name: remote-kubeconfig
            mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            readOnly: true
      volumes:
      - name: remote-kubeconfig
        secret:
          secretName: boot-operator-remote-kubeconfig
          items:
          - key: token
            path: token
          - key: bundle.crt
            path: ca.crt
