system/kustomize/boot-operator-remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boot-service
  namespace: boot-operator-system
spec:
  selector:
    control-plane: controller-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
      nodePort: 30007
  type: NodePort
